--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ibrahim Protfolio</title>
+  <!------------------google-font---------------->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <!------------Style.CSS----------->
   <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
-  
+  <!--------header-part--------------->
+ <section class="top-banner">
+   <div class="half-width">
+  <h1>Welcome To</h1>
+  <h1><span class="orange-color">Ibrahim Sarder</span> Website!</h1>
+  <h3>professional web developer</h3>
+  <p>I am a professional front-end-developer and also have a good grab on wordpress customization. I am highly expert in HTML, CSS, Bootstrap, Javascript theme customization. I am friendly and easy to work, and highly attentive to meet my deadlines.</p>
+  <a class="link-button" target="-blank" href="https://www.linkedin.com/in/ibrahim-sarder">HIRE ME</a>
+ </div>
+  <div class="half-width">
+    <img src="images/photo-1.png">
+  </div>
+</section>
 </body>
 </html>
