--- a/index.html
+++ b/index.html
@@ -27,5 +27,17 @@
     <img src="images/photo-1.png">
   </div>
 </section>
+<!------------------Middle-Part------------------->
+<section class="dream-big">
+  <div class="half-width">
+    <img src="images/photo.png">
+  </div>
+  <div class="half-width">
+    <h1>Dream Big</h1>
+    <h2>Become World's No. 1 Developer</h2>
+    <p>My dream is to one day be a great web developer and I will work hard for it because I have already learned basic HTML and CSS. I can create any simple website I can even teach my friends how to make it Easy website. My goal is to create 3 websites and learn advanced topics.</p>
+    <a class="link-button" target="-blank" href="https://www.receptix.uk/gb/operational-systems-software-for-small-business-jobs-in-United-Kingdom?as=2&g=1838">DOWNLOAD RESUME</a>
+  </div>
+</section>
 </body>
 </html>
