--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!--------header-part--------------->
- <section class="top-banner">
+ <section class="top-banner flexible-container">
    <div class="half-width">
   <h1>Welcome To</h1>
   <h1><span class="orange-color">Ibrahim Sarder</span> Website!</h1>
@@ -28,7 +28,7 @@
   </div>
 </section>
 <!------------------Middle-Part------------------->
-<section class="dream-big">
+<section class="dream-big flexible-container">
   <div class="half-width">
     <img src="images/photo.png">
   </div>
@@ -39,5 +39,23 @@
     <a class="link-button" target="-blank" href="https://www.receptix.uk/gb/operational-systems-software-for-small-business-jobs-in-United-Kingdom?as=2&g=1838">DOWNLOAD RESUME</a>
   </div>
 </section>
+<!-----------------------End-Part-------------------->
+<section class="experience-area">
+  <h1>Experiences</h1>
+  <div class="flexible-container">
+    <div id="full-stack-web" class="experience-item">
+      <h1>Full Stack Developer</h1>
+      <h3 class="orange-color">2024 Present | Pro Level Developer</h3>
+      <p>I am the master of HTML,CSS and Javascript.I know everything nedded to make a website function efficient.I didn't stop with the web.I went beyond with most popular Javascript framework called vue Js.I even know the diployment server and security.I will give you 100% Web solution.</p>
+    </div>
+    <div id="junior-web" class="experience-item">
+      <h1>junior Web Developer</h1>
+      <h3 class="orange-color">2022-2023 | Programming Hero Learner</h3>
+      <p>They didn't offer me a job.But i made myself as a intern web developer.I made their website and showed it to them.They liked it and uploaded the content.It was fun working at Programming Hero.</p>
+    </div>
+  </div>
+</section>
+<!---------------Footer----------------->
+<footer><p>© Ibrahim Sarder,a programming hero initiative</p></footer>
 </body>
 </html>
